[metadata]
name = wsc_influx_tools
url=https://github.com/worldsolarchallenge/wsc-influx-tools

description = "Bridgestone World Solar Challenge Influx Tools"
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown

author = "David Snowdon"
author_email = ""

maintainer = "David Snowdon"
maintainer_email = ""

license = "BSD 3-Clause License"
license_files = file: LICENSE

keywords = pytest, eos

classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Framework :: Pytest
    Intended Audience :: Developers
    Topic :: Software Development :: Testing

project_urls =
    Source = https://github.com/worldsolarchallenge/wsc-influx-tools
    Tracker = https://github.com/worldsolarchallenge/wsc-influx-tools/issues
    Documentation = https://github.com/worldsolarchallenge/wsc-influx-tools

[options]
packages = find:

package_dir=
    =src

include_package_data = True

install_requires =
    influxdb3-python
    influxdb-client
    pandas
    pyyaml
    requests
    mergedeep

[options.entry_points]
console_scripts =
    wsc-influx-send-csv = wsc_influx_tools.wsc_influx_send_csv:main
    wsc-influx-get-data = wsc_influx_tools.wsc_influx_get_data:main

[options.packages.find]
where=src

[options.package_data]
* = README.md